Fix tickets overflow issue. 	modified:   assets/stylesheets/_tickets.scss

--- a/assets/stylesheets/_tickets.scss
+++ b/assets/stylesheets/_tickets.scss
@@ -87,7 +87,6 @@
 
 #tickets-sale {
 	@include box-sizing;
-	height: 26.5em;
 	background-color: #EFEFEF;
 	color: #454545;
 	padding: 3em 6em;
@@ -204,7 +203,7 @@
 	}
 
 	.tickets-title {
-		font-size: 1.75em;
+		font-size: 1.5em;
         height: 50%;
 
 		h2 {
@@ -233,9 +232,9 @@
 		}
 
 		p {
-			font-size: 1em;
+			font-size: 0.9em;
 			margin-top: 1em;
-			line-height: 1.35em;
+			line-height: 1.2em;
 			color: $color-white;
 		}
 	}
@@ -276,13 +275,13 @@
 		padding: 2.5em 1em 0 2.5em;
 
 		h2 {
-			font-size: 1.75em;
+			font-size: 1.5em;
 			margin-bottom: 0.5em;
 		}
 
 		p {
-			font-size: 1em;
-			line-height: 1.5em;
+			font-size: 0.9em;
+			line-height: 1em;
 		}
 	}
 
